--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,16 @@
-cmake_minimum_required(VERSION 3.10)
-project(orthanc-gcp-storage)
+cmake_minimum_required(VERSION 3.10.0)
+project(
+  orthanc-gcp-storage 
+  VERSION 1.0.0 
+  DESCRIPTION "Orthanc plugin to interface with gcp storage"
+)
 
-set(CMAKE_CXX_STANDARD 20
-set(CMAKE_CXX_FLAGS_DEBUG "-g"))
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
 
-set(ORTHANC_GCP_STORAGE_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
-file(GLOB_RECURSE ORTHANC_GCP_STORAGE_SRC_DIR ${ORTHANC_GCP_STORAGE_SRC_DIR}/*)
-
-add_library(orthanc_gcp_storage SHARED ${ORTHANC_GCP_STORAGE_SRC_DIR})
-target_include_directories(orthanc_gcp_storage PRIVATE ${ORTHANC_GCP_STORAGE_SRC_DIR})
+add_library(
+  orthanc_gcp_storage 
+  SHARED
+  src/plugin.cpp
+)
+target_include_directories(orthanc_gcp_storage PRIVATE src)
