--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "2"
 services:
   orthanc:
     build: .
-    ports:
-      - "4242:4242"
-      - "8042:8042"
+    # ports:
+      # - "4242:4242"
+      # - "8042:8042"
     env_file:
       - .env
     volumes:
